After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 617159 - GTypeInterface cannot be unrefed
GTypeInterface cannot be unrefed
Status: RESOLVED FIXED
Product: pygi
Classification: Deprecated
Component: general
unspecified
Other All
: Normal normal
: 0.6
Assigned To: pygi-maint
pygi-maint
: 619286 (view as bug list)
Depends on:
Blocks:
 
 
Reported: 2010-04-29 11:10 UTC by Tomeu Vizoso
Modified: 2010-05-22 11:16 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
GTypeInterface cannot be unrefed (742 bytes, patch)
2010-04-29 11:10 UTC, Tomeu Vizoso
committed Details | Review

Description Tomeu Vizoso 2010-04-29 11:10:17 UTC
Right now a warning is being logged
Comment 1 Tomeu Vizoso 2010-04-29 11:10:19 UTC
Created attachment 159861 [details] [review]
GTypeInterface cannot be unrefed
Comment 2 Tomeu Vizoso 2010-05-21 13:16:21 UTC
*** Bug 619286 has been marked as a duplicate of this bug. ***
Comment 3 Steve Frécinaux 2010-05-21 13:21:45 UTC
I think the duplication and identical patch in both bug means that you can commit this one :-)
Comment 4 Tomeu Vizoso 2010-05-22 11:16:18 UTC
Attachment 159861 [details] pushed as aa0357e - GTypeInterface cannot be unrefed