GTypeInterface cannot be unrefed

https://bugzilla.gnome.org/show_bug.cgi?id=617159